# CMAKE_LEARNING

./: README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.c
t3/: CMakeLists.txt
t3/example/: main.c
t3/include/: bmi.h
t3/src/: CMakeLists.txt  bmi.c
t4/: CMakeLists.txt
t4/Examples/Dataset_DEMO/: main.cpp
t4/cmake_modules/: FindEigen3.cmake
t4/include/: Camera_pose.h  slam_visualizer.h
t4/src/: Camera_pose.cpp  slam_visualizer.cpp
